--- a/About.html
+++ b/About.html
@@ -24,7 +24,7 @@
             <div class="row">
                 <div class="col-6">
                     <div class="logo">
-                        <img src="../img/logo-retina-free-img.png" alt="logo-retina-free-img  img">
+                        <img src="img/logo-retina-free-img.png" alt="logo-retina-free-img  img">
                     </div>
                 </div>
                 <div class="col-6">
@@ -86,7 +86,7 @@
     </div>
 
     <div class="responsibility">
-        <img src="../img/estate-about-img-01.jpg" alt="estate-about-img-01 img">
+        <img src="img/estate-about-img-01.jpg" alt="estate-about-img-01 img">
     </div>
 
     <div class="container">
