--- a/Agent.html
+++ b/Agent.html
@@ -22,7 +22,7 @@
             <div class="row">
                 <div class="col-6">
                     <div class="logo">
-                        <img src="../img/logo-retina-free-img.png" alt="logo-retina-free-img img">
+                        <img src="img/logo-retina-free-img.png" alt="logo-retina-free-img img">
                     </div>
                 </div>
                 <div class="col-6">
@@ -63,7 +63,7 @@
         <div class="row">
             <div class="col-4">
                 <div class="agent-chair">
-                    <img src="../img/estate-agent.jpg" alt="estate-agent img">
+                    <img src="img/estate-agent.jpg" alt="estate-agent img">
                     <h4>Chair Manager</h4>
                     <h2>Danielle Pena</h2>
                     <p>Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam
@@ -86,7 +86,7 @@
             </div>
             <div class="col-4">
                 <div class="agent-chair">
-                    <img src="../img/estate-agent-5.jpg" alt="estate-agent-5 img">
+                    <img src="img/estate-agent-5.jpg" alt="estate-agent-5 img">
                     <h4>Market Strategist</h4>
                     <h2>Mark Obrien</h2>
                     <p>Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam
@@ -110,7 +110,7 @@
             </div>
             <div class="col-4">
                 <div class="agent-chair">
-                    <img src="../img/team-08-free-img.jpg" alt="team-08-free-img  img">
+                    <img src="img/team-08-free-img.jpg" alt="team-08-free-img  img">
                     <h4>Sales Manager</h4>
                     <h2>Russell Douglas</h2>
                     <p>Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam
@@ -140,7 +140,7 @@
         <div class="row">
             <div class="col-4">
                 <div class="agent-chair">
-                    <img src="../img/team-07-free-img.jpg" alt="team-07-free-img  img">
+                    <img src="img/team-07-free-img.jpg" alt="team-07-free-img  img">
                     <h4>Real Estate Agent</h4>
                     <h2>Eugene Berry</h2>
                     <p>Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam
@@ -163,7 +163,7 @@
             </div>
             <div class="col-4">
                 <div class="agent-chair">
-                    <img src="../img/estate-agent-1.jpg" alt="estate-agent-1 img">
+                    <img src="img/estate-agent-1.jpg" alt="estate-agent-1 img">
                     <h4>Real Estate Agent</h4>
                     <h2>Debra Gilbert</h2>
                     <p>Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam
@@ -187,7 +187,7 @@
             </div>
             <div class="col-4">
                 <div class="agent-chair">
-                    <img src="../img/estate-agent-3.jpg" alt="estate-agent-3  img">
+                    <img src="img/estate-agent-3.jpg" alt="estate-agent-3  img">
                     <h4>Real Estate Agent</h4>
                     <h2>Edward Alvarez</h2>
                     <p>Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam
@@ -218,7 +218,7 @@
         <div class="row">
             <div class="col-4">
                 <div class="agent-chair">
-                    <img src="../img/estate-agent-2.jpg" alt="estate-agent-2  img">
+                    <img src="img/estate-agent-2.jpg" alt="estate-agent-2  img">
                     <h4>Real Estate Agent</h4>
                     <h2>Billy Allen</h2>
                     <p>Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam
@@ -241,7 +241,7 @@
             </div>
             <div class="col-4">
                 <div class="agent-chair">
-                    <img src="../img/estate-agent-4.jpg" alt="estate-agent-4  img">
+                    <img src="img/estate-agent-4.jpg" alt="estate-agent-4  img">
                     <h4>Real Estate Agent</h4>
                     <h2>Roger Harris</h2>
                     <p>Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam
