--- a/Propertie.html
+++ b/Propertie.html
@@ -24,7 +24,7 @@
             <div class="row">
                 <div class="col-6">
                     <div class="logo">
-                        <img src="../img/logo-retina-free-img.png" alt="logo-retina-free-img  img">
+                        <img src="img/logo-retina-free-img.png" alt="logo-retina-free-img  img">
                     </div>
                 </div>
                 <div class="col-6">
@@ -58,7 +58,7 @@
         <div class="row">
             <div class="col-4">
                 <div class="commercial">
-                    <img src="../img/img-06-free-img.jpg" alt="img-06-free-img img">
+                    <img src="img/img-06-free-img.jpg" alt="img-06-free-img img">
                     <h4>For Rent</h4>
                 </div>
 
@@ -80,7 +80,7 @@
             <div class="col-4">
 
                 <div class="commercial-background">
-                    <img src="../img/img-07-free-img.jpg" alt="img-07-free-img img">
+                    <img src="img/img-07-free-img.jpg" alt="img-07-free-img img">
                     <h4>For Sale</h4>
                 </div>
 
@@ -100,7 +100,7 @@
             </div>
             <div class="col-4">
                 <div class="commercial">
-                    <img src="../img/img-08-free-img.jpg" alt="img-08-free-img img">
+                    <img src="img/img-08-free-img.jpg" alt="img-08-free-img img">
                     <h4>For Rent</h4>
                 </div>
 
@@ -125,7 +125,7 @@
             <div class="col-4">
 
                 <div class="commercial-background">
-                    <img src="../img/img-09-free-img.jpg" alt="img-09-free-img img">
+                    <img src="img/img-09-free-img.jpg" alt="img-09-free-img img">
                     <h4>For Sale</h4>
                 </div>
 
@@ -146,7 +146,7 @@
             <div class="col-4">
 
                 <div class="commercial">
-                    <img src="../img/img-10-free-img.jpg" alt="img-10-free-img img">
+                    <img src="img/img-10-free-img.jpg" alt="img-10-free-img img">
                     <h4>For Rent</h4>
                 </div>
 
@@ -167,7 +167,7 @@
             </div>
             <div class="col-4">
                 <div class="commercial">
-                    <img src="../img/estate-living-room.jpg" alt="estate-living-room  img">
+                    <img src="img/estate-living-room.jpg" alt="estate-living-room  img">
                     <h4>For Rent</h4>
                 </div>
 
@@ -200,7 +200,7 @@
            <div class="row">
             <div class="col-4">
                 <div class="commercial">
-                    <img src="../img/img-06-free-img.jpg" alt="img-06-free-img img">
+                    <img src="img/img-06-free-img.jpg" alt="img-06-free-img img">
                     <h4>For Rent</h4>
                 </div>
 
@@ -222,7 +222,7 @@
             <div class="col-4">
 
                 <div class="commercial-background">
-                    <img src="../img/img-07-free-img.jpg" alt="img-07-free-img img">
+                    <img src="img/img-07-free-img.jpg" alt="img-07-free-img img">
                     <h4>For Sale</h4>
                 </div>
 
@@ -242,7 +242,7 @@
             </div>
             <div class="col-4">
                 <div class="commercial">
-                    <img src="../img/img-08-free-img.jpg" alt="img-08-free-img img">
+                    <img src="img/img-08-free-img.jpg" alt="img-08-free-img img">
                     <h4>For Rent</h4>
                 </div>
 
@@ -267,7 +267,7 @@
             <div class="col-4">
 
                 <div class="commercial-background">
-                    <img src="../img/img-09-free-img.jpg" alt="img-09-free-img img">
+                    <img src="img/img-09-free-img.jpg" alt="img-09-free-img img">
                     <h4>For Sale</h4>
                 </div>
 
@@ -288,7 +288,7 @@
             <div class="col-4">
 
                 <div class="commercial">
-                    <img src="../img/img-10-free-img.jpg" alt="img-10-free-img img">
+                    <img src="img/img-10-free-img.jpg" alt="img-10-free-img img">
                     <h4>For Rent</h4>
                 </div>
 
@@ -309,7 +309,7 @@
             </div>
             <div class="col-4">
                 <div class="commercial">
-                    <img src="../img/estate-living-room.jpg" alt="estate-living-room  img">
+                    <img src="img/estate-living-room.jpg" alt="estate-living-room  img">
                     <h4>For Rent</h4>
                 </div>
 
@@ -344,7 +344,7 @@
         <div class="row">
          <div class="col-4">
              <div class="commercial">
-                 <img src="../img/img-06-free-img.jpg" alt="img-06-free-img img">
+                 <img src="img/img-06-free-img.jpg" alt="img-06-free-img img">
                  <h4>For Rent</h4>
              </div>
 
@@ -366,7 +366,7 @@
          <div class="col-4">
 
              <div class="commercial">
-                 <img src="../img/img-07-free-img.jpg" alt="img-07-free-img img">
+                 <img src="img/img-07-free-img.jpg" alt="img-07-free-img img">
                  <h4>For Rent</h4>
              </div>
 
@@ -386,7 +386,7 @@
          </div>
          <div class="col-4">
              <div class="commercial-background">
-                 <img src="../img/img-08-free-img.jpg" alt="img-08-free-img img">
+                 <img src="img/img-08-free-img.jpg" alt="img-08-free-img img">
                  <h4>For Sale</h4>
              </div>
 
@@ -411,7 +411,7 @@
          <div class="col-4">
 
              <div class="commercial">
-                 <img src="../img/img-09-free-img.jpg" alt="img-09-free-img img">
+                 <img src="img/img-09-free-img.jpg" alt="img-09-free-img img">
                  <h4>For Rent</h4>
              </div>
 
@@ -432,7 +432,7 @@
          <div class="col-4">
 
              <div class="commercial">
-                 <img src="../img/img-10-free-img.jpg" alt="img-10-free-img img">
+                 <img src="img/img-10-free-img.jpg" alt="img-10-free-img img">
                  <h4>For Rent</h4>
              </div>
 
@@ -453,7 +453,7 @@
          </div>
          <div class="col-4">
              <div class="commercial">
-                 <img src="../img/estate-living-room.jpg" alt="estate-living-room  img">
+                 <img src="img/estate-living-room.jpg" alt="estate-living-room  img">
                  <h4>For Rent</h4>
              </div>
 
