--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
             <div class="row">
                 <div class="col-6">
                     <div class="logo">
-                        <img src="../img/logo-retina-free-img.png" alt="logo-retina-free-img img">
+                        <img src="img/logo-retina-free-img.png" alt="logo-retina-free-img img">
                     </div>
                 </div>
                 <div class="col-6">
