--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="row">
                 <div class="col-6">
                     <div class="logo">
-                        <img src="../img/logo-retina-free-img.png" alt="logo-retina-free-img img">
+                        <img src="img/logo-retina-free-img.png" alt="logo-retina-free-img img">
                     </div>
                 </div>
                 <div class="col-6">
@@ -85,7 +85,7 @@
         <div class="row">
             <div class="col-3">
                 <div class="for-rent">
-                    <img src="../img/estate-modern-apartment.jpg" alt="estate-modern-apartment img">
+                    <img src="img/estate-modern-apartment.jpg" alt="estate-modern-apartment img">
                     <h4>For Rent</h4>
                 </div>
 
@@ -102,7 +102,7 @@
             </div>
             <div class="col-3">
                 <div class="for-rent-background">
-                    <img src="../img/estate-family-home.jpg" alt="estate-family-home img">
+                    <img src="img/estate-family-home.jpg" alt="estate-family-home img">
                     <h4>For Sale</h4>
                 </div>
 
@@ -120,7 +120,7 @@
             </div>
             <div class="col-3">
                 <div class="for-rent">
-                    <img src="../img/modern-apartment.jpg" alt="modern-apartment img">
+                    <img src="img/modern-apartment.jpg" alt="modern-apartment img">
                     <h4>For Rent</h4>
                 </div>
 
@@ -139,7 +139,7 @@
             <div class="col-3">
 
                 <div class="for-rent-background">
-                    <img src="../img/estate-elegant-flat.jpg" alt="estate-elegant-flat  img">
+                    <img src="img/estate-elegant-flat.jpg" alt="estate-elegant-flat  img">
                     <h4>For Sale</h4>
                 </div>
 
@@ -176,7 +176,7 @@
                 </div>
                 <div class="col-6">
                     <div class="about">
-                        <img src="../img/about-01-free-img.jpg" alt="about-01-free-img img">
+                        <img src="img/about-01-free-img.jpg" alt="about-01-free-img img">
                     </div>
                 </div>
             </div>
@@ -194,7 +194,7 @@
         <div class="row">
             <div class="col-4">
                 <div class="commercial">
-                    <img src="../img/img-06-free-img.jpg" alt="img-06-free-img img">
+                    <img src="img/img-06-free-img.jpg" alt="img-06-free-img img">
                     <h4>For Rent</h4>
                 </div>
 
@@ -213,7 +213,7 @@
             </div>
             <div class="col-4">
                 <div class="commercial">
-                    <img src="../img/img-07-free-img.jpg" alt="img-07-free-img img">
+                    <img src="img/img-07-free-img.jpg" alt="img-07-free-img img">
                     <h4>For Rent</h4>
                 </div>
 
@@ -233,7 +233,7 @@
             </div>
             <div class="col-4">
                 <div class="commercial">
-                    <img src="../img/img-08-free-img.jpg" alt="img-08-free-img img">
+                    <img src="img/img-08-free-img.jpg" alt="img-08-free-img img">
                     <h4>For Rent</h4>
                 </div>
 
@@ -260,7 +260,7 @@
             <div class="col-4">
 
                 <div class="commercial-background">
-                    <img src="../img/img-09-free-img.jpg" alt="img-09-free-img img">
+                    <img src="img/img-09-free-img.jpg" alt="img-09-free-img img">
                     <h4>For Sale</h4>
                 </div>
 
@@ -280,7 +280,7 @@
             </div>
             <div class="col-4">
                 <div class="commercial">
-                    <img src="../img/img-10-free-img.jpg" alt="img-10-free-img img">
+                    <img src="img/img-10-free-img.jpg" alt="img-10-free-img img">
                     <h4>For Rent</h4>
                 </div>
 
@@ -301,7 +301,7 @@
             <div class="col-4">
 
                 <div class="commercial">
-                    <img src="../img/estate-living-room.jpg" alt="estate-living-room  img">
+                    <img src="img/estate-living-room.jpg" alt="estate-living-room  img">
                     <h4>For Rent</h4>
                 </div>
 
@@ -333,7 +333,7 @@
             <div class="row">
                 <div class="col-4">
                     <div class="appartment">
-                        <img src="../img/building-2.png" alt="building-2 img">
+                        <img src="img/building-2.png" alt="building-2 img">
                         <h2>Apartments</h2>
                         <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate.</p>
                         <button type="button"  class="btn">Find Appartments</button>
@@ -341,7 +341,7 @@
                 </div>
                 <div class="col-4">
                     <div class="appartment">
-                        <img src="../img/building-1.png" alt="building-1 img">
+                        <img src="img/building-1.png" alt="building-1 img">
                         <h2>Houses</h2>
                         <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate.</p>
                         <button type="button"  class="btn">Find Houses</button>
@@ -349,7 +349,7 @@
                 </div>
                 <div class="col-4">
                     <div class="appartment">
-                        <img src="../img/building.png" alt="building img">
+                        <img src="img/building.png" alt="building img">
                         <h2>Offices</h2>
                         <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate.</p>
                         <button type="button"  class="btn">Find Offices</button>
@@ -367,32 +367,32 @@
     <div class="row">
         <div class="col-2">
             <div class="middle-logo">
-                <img src="../img/logo-icon.png" alt="logo-retina-free-img img">
+                <img src="img/logo-icon.png" alt="logo-retina-free-img img">
             </div>
         </div>
         <div class="col-2">
             <div class="middle-logo">
-                <img src="../img/logo-icon-1.png" alt="logo-icon-1 img">
+                <img src="img/logo-icon-1.png" alt="logo-icon-1 img">
             </div>
         </div>
         <div class="col-2">
             <div class="middle-logo">
-                <img src="../img/logo-icon-2.png" alt="logo-icon-2 img">
+                <img src="img/logo-icon-2.png" alt="logo-icon-2 img">
             </div>
         </div>
         <div class="col-2">
             <div class="middle-logo">
-                <img src="../img/logo-icon-3.png" alt="logo-icon-3 img">
+                <img src="img/logo-icon-3.png" alt="logo-icon-3 img">
             </div>
         </div>
         <div class="col-2">
             <div class="middle-logo">
-                <img src="../img/logo-icon-4.png" alt="logo-icon-4 img">
+                <img src="img/logo-icon-4.png" alt="logo-icon-4 img">
             </div>
         </div>
         <div class="col-2">
             <div class="middle-logo">
-                <img src="../img/logo-icon-5.png" alt="logo-icon-5 img">
+                <img src="img/logo-icon-5.png" alt="logo-icon-5 img">
             </div>
         </div>
     </div>
